Mon May 16 20:12:51 2005  Tim Janik  <timj@gtk.org>

	* bsecore.idl: added janitor to UserMsg. 

	* bsemain.c: add janitor to user messages.

	* bseserver.h, bseserver.c: made bse_server_user_message() reflect
	(newly added) UserMsg fields.

	* bsejanitor.proc: added (bse-janitor-message) to allow scripts to send
	real error, warning etc. messages.

Mon May 16 17:27:49 2005  Tim Janik  <timj@gtk.org>

	* bsejanitor.h, bsejanitor.c, bsejanitor.proc: 
	added exit-code and exit-reason properties. logic cleanups so the
	exit state is available for read outs once connected becomes FALSE.
	API change so script_name and proc_name are always set together.

Sat May 14 20:52:56 2005  Tim Janik  <timj@gtk.org>

	* bseserver.c: improved error messages.

	* bsedevice.c, bsedevice.h: 
	bse_device_set_opened(): enter OPEN state, stores device name.
	device_open_args(): store device opening argument list, assert
	bse_device_set_opened() is used.
	bse_device_close(): cleanup device anme and device opening arguments.

	* bseproject.proc: renamed bse-project-dirty to bse-project-is-dirty
	to circumvent name coliisions in the C++ binding.

	* bse*device-*.c: use bse_device_set_opened().

	* *.c: adaptions to sfilog.h API changes.

Thu May 12 00:13:05 2005  Tim Janik  <timj@gtk.org>

	* bseserver.h, bseserver.c: support emission of user mesage signal 
	without constructing a user message via bse_server_send_user_message().
	turned log messages about failure during PCM and MIDI device selection
	into rich log message with primary, secondary text and details.

	* bsecore.idl: adapted UserMsg record according to SfiLogMessage.

	* bsemain.h, bsemain.c: adapted log handler.

Wed May 11 15:01:28 2005  Tim Janik  <timj@gtk.org>

	* bseproject.proc: added change-name() to alter a project name without
	affecting undo.

Mon May  9 21:05:02 2005  Tim Janik  <timj@gtk.org>

	* bseproject.h, bseproject.c: properly implemented project dirty
	state, based on the project's undo stack.
